# godot-docs-mcp

./: .gitignore  README.md  README_cn.md  chunker.py  cursor_mcp.py  downloader.py  example_usage.gd  interactive_docs.py  mcp_interface.py  mcp_server.py  page_curator.py  pyproject.toml  requirements.txt  start_interactive.bat  start_mcp_server.bat  vectorizer.py  visualizer.py  websites_to_download.txt
artifacts/curated/godotengine/en/stable/: index.md
artifacts/curated/godotengine/en/stable/classes/: class_%40gdscript.md  class_%40globalscope.md  class_acceptdialog.md  class_aescontext.md  class_animatablebody2d.md  class_animatablebody3d.md  class_animatedsprite2d.md  class_animatedsprite3d.md  class_animatedtexture.md  class_animation.md  class_animationlibrary.md  class_animationmixer.md  class_animationnode.md  class_animationnodeadd2.md  class_animationnodeadd3.md  class_animationnodeanimation.md  class_animationnodeblend2.md  class_animationnodeblend3.md  class_animationnodeblendspace1d.md  class_animationnodeblendspace2d.md  class_animationnodeblendtree.md  class_animationnodeextension.md  class_animationnodeoneshot.md  class_animationnodeoutput.md  class_animationnodestatemachine.md  class_animationnodestatemachineplayback.md  class_animationnodestatemachinetransition.md  class_animationnodesub2.md  class_animationnodesync.md  class_animationnodetimescale.md  class_animationnodetimeseek.md  class_animationnodetransition.md  class_animationplayer.md  class_animationrootnode.md  class_animationtree.md  class_area2d.md  class_area3d.md  class_arraymesh.md  (+906 more)
(+233 files in other folders)
