[project]
name = "vector-db-mcp"
version = "0.1.0"
description = "Vector Database MCP Server"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp[cli]>=1.6.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "httpx>=0.24.0",
    "httpx-sse>=0.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server.py"]

[tool.uv.workspace]
members = ["weather"]
